--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
        
         
          <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">Blog</a>
+                    <a class="link" href="{{ site.url }}/notes">Notes</a>
                 </li>
            
 
